@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.9.2 (unreleased) [beta]
 
+** gsasl: Don't abort command on some exepected TLS events (for TLS 1.3).
+Patch from Enrico Scholz <enrico.scholz@sigma-chemnitz.de> in:
+https://lists.gnu.org/archive/html/help-gsasl/2020-08/msg00000.html
+
 ** SCRAM, GS2 and GSSAPI retrieve properties later in
 ** the authentication process.
 Before the property GSASL_CB_TLS_UNIQUE was retrieved during SCRAM
